--- a/index.html
+++ b/index.html
@@ -155,9 +155,28 @@
                 </div>
             </div>
         </section>
-        <section>
+        <footer>
 
-        </section>
+            <div class="section-midle-container flexwrap">
+                <h1>
+                    <p>Multi Purpose</p>
+                    <p>Template</p>
+                </h1>
+                <span>
+                    <p>
+                        <h4>
+                            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit perspiciatis distinctio eius
+                                voluptate fugit?</P>
+                            <P>Lorem ipsum dolor sit amet.</P>
+                            <P>Lorem ipsum dolor sit.</P>
+                        </h4>
+                    </p>
+                </span>
+                <div class="button"><a href="">See more</a></div>
+            </div>
+            <img
+                src="https://www.pngkey.com/png/full/383-3834932_privacy-and-security-phone-laying-down-transparent.png">
+        </footer>
     </div>
 </body>
 
