--- a/index.html
+++ b/index.html
@@ -19,24 +19,12 @@
                     </div>
                     <nav>
                         <ul>
-                            <a href="">
-                                <li class="Home">Home</li>
-                            </a>
-                            <a href="">
-                                <li>Lorem</li>
-                            </a>
-                            <a href="">
-                                <li>Features</li>
-                            </a>
-                            <a href="">
-                                <li>Info</li>
-                            </a>
-                            <a href="">
-                                <li>Info</li>
-                            </a>
-                            <a href="">
-                                <li>Others</li>
-                            </a>
+                            <li class="Home"><a href="">Home</a></li>
+                            <li><a href="">Lorem</a></li>
+                            <li><a href="">Info</a></li>
+                            <li><a href="">Info</a></li>
+                            <li><a href="">Info</a></li>
+                            <li><a href="">Others</a></li>
                         </ul>
                     </nav>
                     <div class="contact">
